--- a/gb/19/10/1/n11559734.md
+++ b/gb/19/10/1/n11559734.md
@@ -1,58 +1,63 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/vwrizb2199/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/vwrizb2199/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/vwrizb2199/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/vwrizb2199/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/vwrizb2199/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/vwrizb2199/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/vwrizb2199/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/vwrizb2199/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/vwrizb2199/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/vwrizb2199/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/vwrizb2199/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/vwrizb2199/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/vwrizb2199/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/vwrizb2199/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/vwrizb2199/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/vwrizb2199/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/vwrizb2199/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/vwrizb2199/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/vwrizb2199/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/vwrizb2199/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/vwrizb2199/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/vwrizb2199/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/vwrizb2199/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/vwrizb2199/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/vwrizb2199/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/vwrizb2199/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/vwrizb2199/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/vwrizb2199/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/vwrizb2199/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/vwrizb2199/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/vwrizb2199/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/vwrizb2199/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/vwrizb2199/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/vwrizb2199/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/vwrizb2199/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/vwrizb2199/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/vwrizb2199/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/vwrizb2199/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/vwrizb2199/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/vwrizb2199/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/vwrizb2199/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/vwrizb2199/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/vwrizb2199/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/vwrizb2199/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/vwrizb2199/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>中坜警方扫荡竹联帮暴力讨债集团</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/10/29111bb1f8fec6beae8b9914ba72a131-600x400.jpg" />
 <h6>中坜警方逮到6名犯嫌利用网路开设赌盘邀被害人网路签赌。（中坜警分局提供）
 </h6>
 <hr>
-<p>【大纪元2019年10月01日讯】（大纪元记者徐乃义台湾桃园报导）<ahref="https://github.com/vwrizb2199/djy/blob/master/gb/tag/%E4%B8%AD%E5%9D%9C.md#1">中坜</a>警分局为净化选前治安，一举逮捕6名<ahref="https://github.com/vwrizb2199/djy/blob/master/gb/tag/%E7%AB%B9%E8%81%94%E5%B8%AE.md#1">竹联帮</a><ahref="https://github.com/vwrizb2199/djy/blob/master/gb/tag/%E6%9A%B4%E5%8A%9B%E8%AE%A8%E5%80%BA%E9%9B%86%E5%9B%A2.md#1">暴力讨债集团</a>。中坜警分局分局长刘印宫表示，网路签赌危害社会至深，许多人常因不禁诱惑而一掷千金导致倾家荡产，为防范不法分子滋生事端衍生犯罪行为，进而影响明年年初总统及立委选举，警方到明年大选前将贯彻遏止任何不法情事影响选举，持续净化选前治安。</p>
-<figure id="attachment_11559737" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/10/c7d09920582cc7d75b5a592c5794f173.jpg"><img class="wp-image-11559737 size-large" src="https://i.epochtimes.com/assets/uploads/2019/10/c7d09920582cc7d75b5a592c5794f173-600x450.jpg" alt="" width="600" b="450" /></a><figcaption class="wp-caption-text">犯嫌因爱好名牌，更进而夺取被害人身上之价值约1万5千元名牌手表及2万2千元之名牌包。（<ahref="https://github.com/vwrizb2199/djy/blob/master/gb/tag/%E4%B8%AD%E5%9D%9C.md#1">中坜</a>警分局提供）</figcaption></figure>
+<p>【大纪元2019年10月01日讯】（大纪元记者徐乃义台湾桃园报导）<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B8%AD%E5%9D%9C.md#1">中坜</a>警分局为净化选前治安，一举逮捕6名<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%AB%B9%E8%81%94%E5%B8%AE.md#1">竹联帮</a><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%9A%B4%E5%8A%9B%E8%AE%A8%E5%80%BA%E9%9B%86%E5%9B%A2.md#1">暴力讨债集团</a>。中坜警分局分局长刘印宫表示，网路签赌危害社会至深，许多人常因不禁诱惑而一掷千金导致倾家荡产，为防范不法分子滋生事端衍生犯罪行为，进而影响明年年初总统及立委选举，警方到明年大选前将贯彻遏止任何不法情事影响选举，持续净化选前治安。</p>
+<figure id="attachment_11559737" aria-describedby="caption-attachment-11559737" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/10/c7d09920582cc7d75b5a592c5794f173.jpg"><img class="wp-image-11559737 size-large" src="https://i.epochtimes.com/assets/uploads/2019/10/c7d09920582cc7d75b5a592c5794f173-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-11559737" class="wp-caption-text">犯嫌因爱好名牌，更进而夺取被害人身上之价值约1万5千元名牌手表及2万2千元之名牌包。<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B8%AD%E5%9D%9C.md#1">中坜</a>警分局提供）</figcaption></figure>
 <p>中坜警方表示，6名犯嫌利用网路开设赌盘邀被害人网路签赌，使被害人不禁诱惑积欠大笔赌资而无力支付；去年开始，6人将积欠赌资之被害人诱拐至汽车旅馆，并于旅馆房间内分别手持棍棒铁桶等器具，以军中蛙人操体罚被害人。</p>
 <p>犯嫌因爱好名牌，更进而夺取被害人身上之价值约1万5千元名牌手表及2万2千元之名牌包，并要求被害人签立4万元本票后才放人。6人到案后对犯案过程矢口否认，目前全案以强盗、恐吓取财、妨碍自由及伤害等罪嫌移送地检侦办。</p>
-<p>警方指出，明年适逢<ahref="https://github.com/vwrizb2199/djy/blob/master/gb/tag/%E6%80%BB%E7%BB%9F%E5%A4%A7%E9%80%89.md#1">总统大选</a>，对于企图经营选举赌盘及各种影响选举秩序之不法分子与黑道帮派，绝对会持续强力侦办，全面净化选前治安，呼吁民众切勿以身试法，若疑有暴力、赌博等介入选举相关线索，欢迎随时与警方联系，共同维护选举治安。◇</p>
+<p>警方指出，明年适逢<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%80%BB%E7%BB%9F%E5%A4%A7%E9%80%89.md#1">总统大选</a>，对于企图经营选举赌盘及各种影响选举秩序之不法分子与黑道帮派，绝对会持续强力侦办，全面净化选前治安，呼吁民众切勿以身试法，若疑有暴力、赌博等介入选举相关线索，欢迎随时与警方联系，共同维护选举治安。◇</p>
 <p>责任编辑：英祯</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/vwrizb2199/djy/blob/master/gb/17/10/27/n9776916.md#1">台警扫黑抓194人 逮竹联帮堂主及统促党主委</a></li>
-<li><a href="https://github.com/vwrizb2199/djy/blob/master/gb/18/5/14/n10391030.md#1">暴力讨债兼绑架 讨债仔获刑六年</a></li>
-<li><a href="https://github.com/vwrizb2199/djy/blob/master/gb/18/6/1/n10446633.md#1">强收小黄保护费  台竹联帮副堂主落网</a></li>
-<li><a href="https://github.com/vwrizb2199/djy/blob/master/gb/18/11/20/n10863317.md#1">选前治安 桃警封城扫荡竹联帮南堂、太极堂</a></li>
-<li><a href="https://github.com/vwrizb2199/djy/blob/master/gb/19/5/6/n11237114.md#1">台北市警察力扫毒黄赌 送办19家违法业者</a></li>
-<li><a href="https://github.com/vwrizb2199/djy/blob/master/gb/19/5/21/n11270560.md#1">统促党主委涉恐吓收押 台立委吁没收不法财产</a></li>
-<li><a href="https://github.com/vwrizb2199/djy/blob/master/gb/19/7/31/n11420995.md#1">中共暂停赴台自由行 外媒：总统大选前施压</a></li>
-<li><a href="https://github.com/vwrizb2199/djy/blob/master/gb/19/8/4/n11430034.md#1">台总统大选 赖清德动向受关注</a></li>
-<li><a href="https://github.com/vwrizb2199/djy/blob/master/gb/20/3/27/n11979887.md#1">使用逾期原料肉 富丰食品工厂遭查获全数封存</a></li>
-<li><a href="https://github.com/vwrizb2199/djy/blob/master/gb/20/3/27/n11979645.md#1">支援机场采检站 联新国际医院长亲值大夜班</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/10/27/n9776916.md#1">台警扫黑抓194人 逮竹联帮堂主及统促党主委</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/14/n10391030.md#1">暴力讨债兼绑架 讨债仔获刑六年</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/1/n10446633.md#1">强收小黄保护费  台竹联帮副堂主落网</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/11/20/n10863317.md#1">选前治安 桃警封城扫荡竹联帮南堂、太极堂</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/5/6/n11237114.md#1">台北市警察力扫毒黄赌 送办19家违法业者</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/5/21/n11270560.md#1">统促党主委涉恐吓收押 台立委吁没收不法财产</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/7/31/n11420995.md#1">中共暂停赴台自由行 外媒：总统大选前施压</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/8/4/n11430034.md#1">台总统大选 赖清德动向受关注</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616357.md#1">翻摄同事电脑隐私无悔意 桃院法官撤职停用2年</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616248.md#1">新兴高中估10位同学达医学系  35位达台大录取</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/28/n10672735.md#1" target="_blank">为反右开场祭旗：三人被处决 万人围观</a></li><li><a href="https://github.com/vwrizb2199/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/14/12/28/n4328405.md#1" target="_blank">云帆：从台北市长保护法轮功学员谈起</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/9/n10840435.md#1" target="_blank">大饥荒是中共有计划的屠杀手段（下）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/3/n11297122.md#1" target="_blank">外媒：中国陆军医院前实习生亲历活摘器官</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/vwrizb2199/djy/blob/master/gb/20/3/26/n11977635.md#1">美发言人回击华春莹：习总书记讲媒体姓党</a></li>
-<li><a href="https://github.com/vwrizb2199/djy/blob/master/gb/20/3/26/n11977140.md#1">台湾确诊者多轻症但住院久 张上淳解密</a></li>
-<li><a href="https://github.com/vwrizb2199/djy/blob/master/gb/20/3/26/n11975414.md#1">大陆知情医生：中共病毒只能靠自愈</a></li>
-<li><a href="https://github.com/vwrizb2199/djy/blob/master/gb/20/3/26/n11977926.md#1">四川公民赵凯公开呼吁“解散共产党”</a></li>
-<li><a href="https://github.com/vwrizb2199/djy/blob/master/gb/20/3/26/n11978059.md#1">【最新疫情3.27】川普签署经济刺激法案</a></li>
-<li><a href="https://github.com/vwrizb2199/djy/blob/master/gb/20/3/25/n11973180.md#1">辛龙憔悴赴灵堂 瞒着女儿说：妈妈去旅行了</a></li>
-<li><a href="https://github.com/vwrizb2199/djy/blob/master/gb/20/3/25/n11973870.md#1">辛龙灵堂伴妻5小时 双手合十离开未受访</a></li>
-<li><a href="https://github.com/vwrizb2199/djy/blob/master/gb/20/3/26/n11976245.md#1">墨西哥男子居家隔离 派小狗去买零食</a></li>
-<li><a href="https://github.com/vwrizb2199/djy/blob/master/gb/20/3/25/n11974278.md#1">与高圆圆携女抵上海 赵又廷复工前被强制隔离</a></li>
-<li><a href="https://github.com/vwrizb2199/djy/blob/master/gb/20/3/25/n11971808.md#1">志村健传感染中共肺炎 日本演艺界首例</a></li>
-<li><a href="https://github.com/vwrizb2199/djy/blob/master/gb/20/2/27/n11900217.md#1">【历史上的瘟疫】上帝之鞭：欧洲黑死病</a></li>
-<li><a href="https://github.com/vwrizb2199/djy/blob/master/gb/20/3/24/n11970004.md#1">老僧从冥府归来 传信给行恶的官员们</a></li>
-<li><a href="https://github.com/vwrizb2199/djy/blob/master/gb/20/3/25/n11974130.md#1">张昆仑：大艺通天</a></li>
-<li><a href="https://github.com/vwrizb2199/djy/blob/master/gb/20/3/18/n11950234.md#1">拥28个博士学位 推展传统舞蹈的黄埔名将何志浩</a></li>
-<li><a href="https://github.com/vwrizb2199/djy/blob/master/gb/13/2/3/n3792263.md#1">米开朗基罗（2） 成名作《圣殇》</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615078.md#1">刘凯文：香港抗疫政策混乱 遗体滞留急症室</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614595.md#1">【直播】俄乌大战 拜登首次国情咨文演说</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/vwrizb2199/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/vwrizb2199/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/10/1/n11559734.htm">中坜警方扫荡竹联帮暴力讨债集团</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/10/1/n11559734.htm">中坜警方扫荡竹联帮暴力讨债集团</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/vwrizb2199/djy/blob/master/gb/19/10/1/n11559734.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/vwrizb2199/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vwrizb2199/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/vwrizb2199/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/vwrizb2199/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/vwrizb2199/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vwrizb2199/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/vwrizb2199/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vwrizb2199/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/vwrizb2199/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vwrizb2199/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/vwrizb2199/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vwrizb2199/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/vwrizb2199/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vwrizb2199/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/vwrizb2199/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vwrizb2199/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/vwrizb2199/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vwrizb2199/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/vwrizb2199/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vwrizb2199/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/vwrizb2199/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vwrizb2199/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/vwrizb2199/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vwrizb2199/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/vwrizb2199/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vwrizb2199/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/vwrizb2199/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vwrizb2199/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/vwrizb2199/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vwrizb2199/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/vwrizb2199/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vwrizb2199/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/vwrizb2199/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vwrizb2199/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/vwrizb2199/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vwrizb2199/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/vwrizb2199/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vwrizb2199/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/vwrizb2199/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vwrizb2199/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/vwrizb2199/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vwrizb2199/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/vwrizb2199/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vwrizb2199/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/vwrizb2199/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vwrizb2199/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/vwrizb2199/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vwrizb2199/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/19/10/1/n11559734.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
